--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -30,7 +30,7 @@ out: ../css/header.css, sourcemap: true, compress: true
       float: right;
       height: 100%;
 
-      #search {
+      #search-form {
         height: 25px;
         padding: 0;
         margin: 6.5px 15px;
