--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -6,7 +6,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 }
 
 #site-header {
-  padding: 0 60px;
+  padding: 0 4%;
   #site-header-wrapper {
     position: relative;
     width: 100%;
