--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -25,6 +25,14 @@ out: ../css/header.css, sourcemap: true, compress: true
     #site-header-store-name-container {
       float: left;
       height: 100%;
+      padding: 50px 55px 0;
+      font-size: 24px;
+      > a {
+        color: white;
+        &:hover {
+          color: #337ab7;
+        }
+      }
     }
     #site-header-right {
       float: right;
