--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -3,6 +3,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 
 #site-header-container {
   display: none;
+  font-family: Arial,sans-serif;
 }
 
 #site-header {
