--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -95,6 +95,7 @@ out: ../css/header.css, sourcemap: true, compress: true
             height: 24px;
             line-height: 24px;
             margin-right: 2px;
+            float: left;
 
             a {
               float: left;
