--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -103,6 +103,8 @@ out: ../css/header.css, sourcemap: true, compress: true
               height: inherit;
               line-height: inherit;
               padding: 0 20px;
+              font-size: 13px;
+              color: white;
             }
           }
         }
