--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -106,6 +106,10 @@ out: ../css/header.css, sourcemap: true, compress: true
               font-size: 13px;
               color: white;
             }
+
+            &.active {
+              background: #60bcff none repeat scroll 0 0;              
+            }
           }
         }
       }
