--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -8,6 +8,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 
 #site-header {
   padding: 0 4%;
+  font-size: 14px;
 
   #site-header-wrapper {
     position: relative;
@@ -41,6 +42,10 @@ out: ../css/header.css, sourcemap: true, compress: true
       float: right;
       height: 100%;
 
+      #site-header-search-form {
+        float: left;
+      }
+
       #search-form {
         height: 25px;
         padding: 0;
@@ -72,6 +77,29 @@ out: ../css/header.css, sourcemap: true, compress: true
           background-position: center center;
           position: absolute;
           cursor: pointer;
+        }
+      }
+
+      #site-header-user-menu-container {
+        float: right;
+        #user-menu-toggle {
+          position: relative;
+          width: 135px;
+          height: 40px;
+          float: right;
+          padding-left: 60px;
+          cursor: pointer;
+          line-height: 40px;
+
+          span {
+            color:white;
+          }
+
+          &:hover {
+            span {
+              color: black;
+            }
+          }
         }
       }
 
