--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -10,6 +10,12 @@ out: ../css/header.css, sourcemap: true, compress: true
   padding: 0 4%;
   font-size: 14px;
 
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
   #site-header-wrapper {
     position: relative;
     width: 100%;
