--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -93,9 +93,24 @@ out: ../css/header.css, sourcemap: true, compress: true
           width: 135px;
           height: 40px;
           float: right;
-          padding-left: 60px;
           cursor: pointer;
           line-height: 40px;
+
+          a {
+            display: block;
+            width: 100%;
+            height: 100%;
+            padding-left: 50px;
+          }
+
+          img {
+            position: absolute;
+            top: 5px;
+            left: 10px;
+            height: 30px;
+            width: 30px;
+            border-radius: 100%;
+          }
 
           span {
             color:white;
