--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -88,6 +88,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 
       #site-header-user-menu-container {
         float: right;
+        
         #user-menu-toggle {
           position: relative;
           width: 135px;
@@ -96,7 +97,7 @@ out: ../css/header.css, sourcemap: true, compress: true
           cursor: pointer;
           line-height: 40px;
 
-          a {
+          a.profile-menu-toggle {
             display: block;
             width: 100%;
             height: 100%;
