--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -88,7 +88,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 
       #site-header-user-menu-container {
         float: right;
-        
+
         #user-menu-toggle {
           position: relative;
           width: 135px;
@@ -120,6 +120,77 @@ out: ../css/header.css, sourcemap: true, compress: true
           &:hover {
             span {
               color: black;
+            }
+          }
+
+          ul {
+            width: 165px;
+            margin-left: 0;
+            position: absolute;
+            top: 45px;
+            border: none;
+            font-size: 14px;
+            color: #7f8c8d;
+            font-weight: 400;
+            padding: 0;
+            z-index: 10000;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            border-radius: 5px;
+            -webkit-background-clip: padding-box;
+            -moz-background-clip: padding;
+            background-clip: padding-box;
+
+            .dropdown-header {
+                display: block;
+                padding: 3px 20px;
+                font-size: 12px;
+                line-height: 1.42857143;
+                color: #777;
+                white-space: nowrap;
+                width: 175px;
+                height: 12px;
+                background-image: url(../img/bg_sheet.png);
+                background-position: -385px 0;
+            }
+
+            li {
+              text-align: left;
+              display: block;
+              width: 100%;
+              background: #ecf0f1;
+              margin: 0;
+              padding: 0;
+              height: 40px;
+              border-bottom: 1px solid #d6d7d9;
+
+              &:first-of-type {
+                -webkit-border-radius: 5px 5px 0 0;
+                -moz-border-radius: 5px 5px 0 0;
+                border-radius: 5px 5px 0 0;
+                -webkit-background-clip: padding-box;
+                -moz-background-clip: padding;
+                background-clip: padding-box;
+              }
+
+              &:last-of-type {
+                -webkit-border-radius: 0 0 5px 5px;
+                -moz-border-radius: 0 0 5px 5px;
+                border-radius: 0 0 5px 5px;
+                -webkit-background-clip: padding-box;
+                -moz-background-clip: padding;
+                background-clip: padding-box;
+              }
+
+              a {
+                float: left;
+                display: block;
+                padding: 0 20px;
+                color: #6a7686;
+                text-align: left;
+                height: 40px;
+                line-height: 40px;
+              }
             }
           }
         }
