--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -106,33 +106,33 @@ echo $this->render('partials/header/metaheader.phtml');
 
         header ul li:active,
         #site-header ul li:active {
-            background: <?=$this->template['header-nav-tabs']['background-color-active']?> none repeat scroll 0 0;
+            background: <?=$this->template['header-nav-tabs']['background-color-active']?> none repeat scroll 0 0 !important;
         }
         header ul li:hover,
         #site-header ul li:hover {
-            background: <?=$this->template['header-nav-tabs']['background-color-hover']?> none repeat scroll 0 0;
+            background: <?=$this->template['header-nav-tabs']['background-color-hover']?> none repeat scroll 0 0 !important;
         }
 
         header ul li ul li:active,
         #site-header ul li ul li:active {
-            background: <?=$this->template['header-nav-tabs']['background-color-active']?> none repeat scroll 0 0;
+            background: <?=$this->template['header-nav-tabs']['background-color-active']?> none repeat scroll 0 0 !important;
         }
 
         header ul li ul li:hover,
         #site-header ul li ul li:hover {
-            background: <?=$this->template['header-nav-tabs']['background-color-hover']?> none repeat scroll 0 0;
+            background: <?=$this->template['header-nav-tabs']['background-color-hover']?> none repeat scroll 0 0 !important;
         }
         header ul li:active > a,
         #site-header ul li:active > a {
-            color: <?=$this->template['header-nav-tabs']['link']['color-active']?>;
+            color: <?=$this->template['header-nav-tabs']['link']['color-active']?> !important;
         }
         header ul li:hover > a,
         #site-header ul li:hover > a {
-            color: <?=$this->template['header-nav-tabs']['link']['color-hover']?>;
+            color: <?=$this->template['header-nav-tabs']['link']['color-hover']?> !important;
         }
         header ul li ul li:hover a,
         #site-header ul li ul li:hover > a {
-            color: <?=$this->template['header-nav-tabs']['link']['color-hover']?>;
+            color: <?=$this->template['header-nav-tabs']['link']['color-hover']?> !important;
         }
 
         ul.menu-nav-tabs li {
