--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -88,10 +88,11 @@ out: ../css/header.css, sourcemap: true, compress: true
 
       #site-header-user-menu-container {
         float: right;
-
+        margin-right: 5px;
+        
         #user-menu-toggle {
           position: relative;
-          width: 135px;
+          width: 130px;
           height: 40px;
           float: right;
           cursor: pointer;
@@ -101,7 +102,7 @@ out: ../css/header.css, sourcemap: true, compress: true
             display: block;
             width: 100%;
             height: 100%;
-            padding-left: 50px;
+            padding-left: 60px;
           }
 
           img {
