--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -264,10 +264,11 @@ out: ../css/header.css, sourcemap: true, compress: true
 
 @media (max-width:767px) {
   #site-header {
-    height: 180px;
-    padding: 0 5px;
+    height: 180px !important;
+    padding: 0 5px !important;
 
     #site-header-wrapper {
+      padding: 0 !important;
 
       #site-header-logo-container {
         margin: 0 auto;
