--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -3,6 +3,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 
 #site-header-container {
   font-family: Arial,sans-serif;
+  display: none;
 }
 
 #site-header {
@@ -23,6 +24,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 
     #site-header-logo-container {
       position: absolute;
+      overflow: hidden;
       > a {
         width: 100%;
         display: block;
