--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -80,7 +80,7 @@ echo $this->render('partials/header/metaheader.phtml');
 
 
     <style>
-        #site-header { display:none: }
+        section#site-header { display:none !important; }
 
         header a {
             color:  <?=$this->template['header-nav-tabs']['link']['color']?>;
