--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -49,8 +49,17 @@ out: ../css/header.css, sourcemap: true, compress: true
       float: right;
       height: 100%;
 
+      #site-header-right-top {
+        height: 40px;
+        width: 100%;
+        padding-right: 135px;
+      }
+
       #site-header-search-form {
         float: left;
+        width: 100%;
+        max-width: 16em;
+        margin: 6.5px 0;
       }
 
       #search-form {
