--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -7,7 +7,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 }
 
 #site-header {
-  padding: 0 4%;
+  padding: 0 30px;
   font-size: 14px;
 
   ul {
@@ -60,6 +60,12 @@ out: ../css/header.css, sourcemap: true, compress: true
         width: 100%;
         max-width: 16em;
         margin: 6.5px 0;
+      }
+
+      #site-header-user-menu-container {
+        position: absolute;
+        top: 0;
+        right: 0;
       }
 
       #search-form {
