--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -58,7 +58,10 @@ out: ../css/header.css, sourcemap: true, compress: true
         float: left;
         width: 100%;
         max-width: 16em;
-        margin: 6.5px 0;
+
+        #search-form {
+          margin: 6.5px 0;
+        }
       }
 
       #site-header-user-menu-container {
@@ -311,6 +314,7 @@ out: ../css/header.css, sourcemap: true, compress: true
 
           #site-header-search-form {
             width: 100%;
+            max-width: 100%;
           }
 
           ul#site-header-user-menu-container {
