--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -311,6 +311,7 @@ out: ../css/header.css, sourcemap: true, compress: true
         #site-header-right-top {
           width: 100%;
           padding-right: 170px;
+          padding-left: 10px;
 
           #site-header-search-form {
             width: 100%;
