--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -35,7 +35,7 @@ out: ../css/header.css, sourcemap: true, compress: true
     #site-header-store-name-container {
       float: left;
       height: 100%;
-      padding: 50px 55px 0;
+      padding: 50px 0 0 55px;
       font-size: 24px;
       > a {
         color: white;
