--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -211,6 +211,7 @@ out: ../css/header.css, sourcemap: true, compress: true
                 text-align: left;
                 height: 40px;
                 line-height: 40px;
+                width: 100%;
               }
             }
           }
