--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -327,7 +327,7 @@ out: ../css/header.css, sourcemap: true, compress: true
           left: -34px;
 
           .dropdown-header {
-            background-position: -348px 0;
+            background-position: -351px 0 !important;
           }
         }
       }
