--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -304,6 +304,7 @@ out: ../css/header.css, sourcemap: true, compress: true
         height: 40px;
 
         #site-header-right-top {
+          padding-right: 175px;
           width: 100%;
           padding-left: 10px;
 
