--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -242,6 +242,7 @@ out: ../css/header.css, sourcemap: true, compress: true
             padding: 0;
             z-index: 999;
             right: 0;
+            width: 175px;
 
             li {
               background-color: #609dca;
@@ -304,7 +305,7 @@ out: ../css/header.css, sourcemap: true, compress: true
         height: 40px;
 
         #site-header-right-top {
-          padding-right: 175px;
+          padding-right: 185px;
           width: 100%;
           padding-left: 10px;
 
