--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -51,7 +51,9 @@ out: ../css/header.css, sourcemap: true, compress: true
       #site-header-right-top {
         height: 40px;
         width: 100%;
-        padding-right: 155px;
+        &.w-user {
+          padding-right: 155px;
+        }
       }
 
       #site-header-search-form {
