--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -51,8 +51,10 @@ out: ../css/header.css, sourcemap: true, compress: true
       #site-header-right-top {
         height: 40px;
         width: 100%;
+        padding-left: 145px;
         &.w-user {
           padding-right: 155px;
+          padding-left: 0;
         }
       }
 
