--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -51,10 +51,9 @@ out: ../css/header.css, sourcemap: true, compress: true
       #site-header-right-top {
         height: 40px;
         width: 100%;
-        padding-left: 145px;
+        padding-right: 5px;
         &.w-user {
           padding-right: 155px;
-          padding-left: 0;
         }
       }
 
