--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -37,6 +37,7 @@ out: ../css/header.css, sourcemap: true, compress: true
       height: 100%;
       padding: 50px 0 0 55px;
       font-size: 24px;
+      position: absolute;
       > a {
         color: white;
         &:hover {
@@ -298,6 +299,7 @@ out: ../css/header.css, sourcemap: true, compress: true
         text-align: center;
         padding: 15px 0;
         height: auto;
+
       }
 
       #site-header-right {
