--- a/application/modules/default/views/scripts/logout/logout.phtml
+++ b/application/modules/default/views/scripts/logout/logout.phtml
@@ -19,7 +19,6 @@ if (APPLICATION_ENV == 'development') {
     $http_scheme = $request->getScheme();
 }
 
-$baseurl = Zend_Registry::get('config')->settings->client->default->baseurl;
 $config = Zend_Registry::get('config')->settings->domain;
 
 
@@ -37,8 +36,7 @@ foreach ($domains as $domain) {
     <img src="<?=$http_scheme?>://<?=$config->opencode->host?>/users/sign_out" style="display:none;" />
     <img src="<?=$http_scheme?>://<?=$config->opencode->host?>/external/removedata.php" style="display:none;" />
     <img src="<?=$http_scheme?>://<?=$config->forum->host?>:8443/removedata.php" style="display:none;" />
-    <img src="<?=$http_scheme?>://<?=$config->base->host?>/logout" style="display:none;" />
-    <img src="/external/removedata.php" style="display:none;" />
-    
+    <img src="<?=$http_scheme?>://<?=$config->base->host?>/external/removedata.php" style="display:none;" />
+
 </body>
 </html>
